@@ -50,7 +50,8 @@ class MockTest(unittest2.TestCase):
                          "default mock should not have '_items' attribute")
 
         self.assertIsNone(mock._mock_parent, "parent not initialised correctly")
-        self.assertIsNone(mock._mock_methods, "methods not initialised correctly")
+        self.assertIsNone(mock._mock_methods,
+                          "methods not initialised correctly")
         self.assertEqual(mock._mock_children, {},
                          "children not initialised incorrectly")
 
@@ -782,6 +783,8 @@ class MockTest(unittest2.TestCase):
 repr should use new name (so new name should default to name if not None)
 reset_mock should clear mock_calls (including children)
 rename _new_name and _new_parent to _mock_new_name and _mock_new_parent
+args lists (call_args_list, method_calls and mock_calls) could allow a
+membership test ('in') for lists - to see if a call chain is contained in them.
 """
 
 
